feat: m1-015-activity-log
